Practice/Case 1.1.2.5. Azure Kubernetes Service (AKS)/ingress/example/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: 52.234.0.105.nip.io
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dotnet-backend-service
                port:
                  number: 5000
