Practice/Case 1.1.2.5. Azure Kubernetes Service (AKS)/ingress/example/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # ✅ This tells K8s to route via the nginx controller
  rules:
    - host: 52.234.0.105.nip.io
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: nginx-demo-service
                port:
                  number: 80
